css: fix alignment of empty content

--- a/src/styles/patch.scss
+++ b/src/styles/patch.scss
@@ -7,6 +7,8 @@
 // Make sure empty content is full width
 [role='note'].empty-content {
   width: 100%;
+  text-align: center;
+  padding: 10px;
 }
 
 // Make NcListItem border-box to prevent overflow
